--- a/views/admin/posts.ejs
+++ b/views/admin/posts.ejs
@@ -17,8 +17,10 @@
     <div class="admin-nav">
       <a href="/admin/posts" class="admin-nav-link admin-nav-link--active">Posts</a>
       <a href="/admin/foto" class="admin-nav-link">Foto</a>
-      <a href="/admin/users" class="admin-nav-link">Users</a>
-      <a href="/admin/audit" class="admin-nav-link">Audit Log</a>
+      <% if (user.role === 'admin') { %>
+        <a href="/admin/users" class="admin-nav-link">Users</a>
+        <a href="/admin/audit" class="admin-nav-link">Audit Log</a>
+      <% } %>
       <div class="admin-user">
         <span><%= user.email %></span>
         <form action="/admin/logout" method="POST">
